# fcitx5-keyman

./: CMakeLists.txt  Messages.sh  README.md  org.fcitx.Fcitx5.Addon.Keyman.metainfo.xml.in
po/: LINGUAS  de.po  fr.po  ja.po  ko.po  ru.po  tr.po  vi.po  zh_TW.po
src/: CMakeLists.txt  engine.cpp  engine.h  keyman.conf.in.in  kmpdata.h  kmpmetadata.cpp  kmpmetadata.h
